istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-sample-provider
spec:
  host: dubbo-sample-provider
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
