istio/serviceentry.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: test-dubbo-service
  annotations:
    interface: org.apache.dubbo.samples.basic.api.DemoService
spec:
  hosts:
  - org.apache.dubbo.samples.basic.api.demoservice
  addresses:
  - 193.193.193.193
  ports:
  - number: 20880
    name: tcp-dubbo
    protocol: TCP
  workloadSelector:
    labels:
      app: dubbo-sample-provider
  resolution: STATIC
